# AX-Monitoring-PS-Blazor

./: .gitignore  AXMonitoringBU.sln  CHANGELOG_POWERSHELL_MIGRATION.md  CLAUDE.md  COMPLETED_IMPROVEMENTS.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEV_TODOS.md  DOCUMENTATION_STATUS.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  MIGRATION_TO_POWERSHELL.md  Makefile  POWERSHELL_VS_PYTHON.md  QWEN.md  README.md  STORAGE_MIGRATION.md  TESTING_STATUS.md  USP_IMPLEMENTATION_STATUS.md  advanced_features_ui.txt  config.yaml  docker-compose.yml  env.example  new_features_section.txt  pyproject.toml  pytest.ini  seed-demo-data.ps1  seed-demo-data.sql  seed-via-api.ps1  streamlit.toml
.github/workflows/: ci.yml
AX-Monitoring-Blazor/: AX-Monitoring-Blazor.sln  appsettings.json
AX-Monitoring-Blazor/AX-Monitoring-Blazor.Client/: AX-Monitoring-Blazor.Client.csproj  Class1.cs
AX-Monitoring-Blazor/AX-Monitoring-Blazor.Core/: AX-Monitoring-Blazor.Core.csproj  Class1.cs
AX-Monitoring-Blazor/AX-Monitoring-Blazor.Infrastructure/: AX-Monitoring-Blazor.Infrastructure.csproj  Class1.cs
AX-Monitoring-Blazor/AX-Monitoring-Blazor.Server/: AX-Monitoring-Blazor.Server.csproj  Program.cs
AX-Monitoring-Blazor/AX-Monitoring-Blazor.Shared/: AX-Monitoring-Blazor.Shared.csproj  AlertDto.cs  BatchJobDto.cs  BlockingChainDto.cs  Class1.cs  KpiDataDto.cs  SessionDto.cs  SqlHealthDto.cs  UserDto.cs
AXMonitoringBU.Api/: AXMonitoringBU.Api.csproj  AXMonitoringBU.Api.http  Program.cs  appsettings.Development.json  appsettings.Production.json  appsettings.json  axmonitoring.db-shm  axmonitoring.db-wal
AXMonitoringBU.Api.Tests/: AXMonitoringBU.Api.Tests.csproj  UnitTest1.cs
AXMonitoringBU.Api.Tests/Controllers/: MetricsControllerTests.cs
AXMonitoringBU.Api.Tests/Integration/: MetricsControllerIntegrationTests.cs
AXMonitoringBU.Api.Tests/Services/: AlertServiceTests.cs  KpiDataServiceTests.cs
AXMonitoringBU.Api/BackgroundServices/: AlertCorrelationBackgroundService.cs  AlertEscalationBackgroundService.cs  ArchivingBackgroundService.cs  BaselineRecalculationService.cs  CostBudgetBackgroundService.cs  DeadlockMonitoringService.cs  ScheduledReportBackgroundService.cs
AXMonitoringBU.Api/Controllers/: AlertCorrelationController.cs  AlertEscalationController.cs  AlertsController.cs  ArchivingController.cs  AuthController.cs  BatchJobHistoryController.cs  BatchJobsController.cs  BulkOperationsController.cs  CostTrackingController.cs  DashboardsController.cs  DatabaseController.cs  DeadlocksController.cs  ErrorAnalyticsController.cs  ExportTemplatesController.cs  HealthController.cs  IntegrationsController.cs  MetricsController.cs  MetricsExportController.cs  NotificationsController.cs  PerformanceAnalyticsController.cs  PerformanceBudgetController.cs  PredictionsController.cs  RemediationController.cs  ReportsController.cs  (+7 more)
AXMonitoringBU.Blazor/: AXMonitoringBU.Blazor.csproj  Program.cs  appsettings.Development.json  appsettings.json
AXMonitoringBU.Blazor.Tests/: AXMonitoringBU.Blazor.Tests.csproj  UnitTest1.cs
PowerShell/: Create-Admin-Test.ps1  Create-AdminUser-Simple.ps1  Create-AdminUser.ps1  Install-AXMonitor.ps1  Install-Service.ps1  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  Start-AXMonitor-Fixed.ps1  Start-AXMonitor-Simple.ps1  Start-AXMonitor-Working.ps1  Start-AXMonitor.ps1  Start-AXMonitor.ps1.modified  Start-Test.ps1  Start-WithPS7.ps1  Test-Module-Import.ps1  Test-Modules.ps1
docs/: ANALYTICS_FEATURES.md  AX_DATENBANK_KONFIGURATION.md  FINALE_KONFIGURATION.md  KONFIGURATION.md  README.md  alert-triage-runbook.md  architecture.md  baseline-plan.md  deploy-runbook.md  prd.md  rollback-runbook.md  xevents-deadlock-guide.md
(+209 files in other folders)
